fix the popover alignments

--- a/src/main/resources/scss/_content.scss
+++ b/src/main/resources/scss/_content.scss
@@ -237,7 +237,7 @@
 
 
 .simple-popover-widget {
-	position: absolute;
+	position: fixed;
 	background-color: #ffffff;
 	color: $secondary-grey;
 	font: normal 14px/22px $font;
